# rust-bio

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .rusty-hook.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  foo.fasta  get_kind_file.fasta  lcov.info  tarpaulin-report.html  update_docs_new.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
.github/workflows/: conventional-prs.yml  release-please.yml  rust-clippy.yml  rust.yml
benches/: approximate_matching.rs  blosum62.rs  distance.rs  fasta_buffer_size.rs  fastq.rs  fastx.rs  fmindex.rs  interval_tree.rs  orf.rs  pairhmm.rs  pairwise.rs  pattern_matching.rs  sparse.rs  suffix_array.rs  tb.rs
doc/: search-index.js
doc/bio/: index.html  stability.html  stability.json
doc/bio/alignment/: enum.AlignmentOperation.html  index.html  struct.Alignment.html
doc/bio/alignment/pairwise/: index.html  struct.Aligner.html
doc/bio/alphabets/: fn.get_dna_alphabet.html  fn.get_iupac_dna_alphabet.html  index.html  struct.Alphabet.html  struct.RankTransform.html  type.SymbolRanks.html
doc/bio/bitencoding/: index.html  struct.BitEnc.html  struct.BitEncIter.html
doc/bio/data_structures/: index.html
doc/bio/data_structures/bwt/: fn.get_bwt.html  fn.get_inverse.html  index.html  struct.FMIndex.html  struct.Occ.html  type.BWT.html
doc/bio/data_structures/rank_select/: index.html  struct.RankSelect.html
doc/bio/data_structures/suffix_array/: fn.get_lcp.html  fn.get_suffix_array.html  index.html  type.LCPArray.html  type.SuffixArray.html
doc/bio/io/: index.html
doc/bio/io/fastq/: index.html  struct.FastqFile.html  struct.Record.html
doc/bio/pattern_matching/: index.html
doc/bio/pattern_matching/bndm/: index.html  struct.BNDM.html  struct.BNDMMatches.html
doc/bio/pattern_matching/bom/: index.html  struct.BOM.html  struct.BOMMatches.html
doc/bio/pattern_matching/horspool/: index.html  struct.Horspool.html  struct.HorspoolMatches.html
doc/bio/pattern_matching/kmp/: index.html  struct.KMP.html  struct.KMPMatches.html
doc/bio/pattern_matching/shift_and/: fn.get_masks.html  index.html  struct.ShiftAnd.html  struct.ShiftAndMatches.html
doc/bio/utils/: fn.prescan.html  fn.scan.html  fn.trim_newline.html  index.html
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/iter/: trait.Iterator.js
doc/implementors/core/marker/: trait.Copy.js
doc/src/bio/: alphabets.rs.html  bitencoding.rs.html  lib.rs.html  utils.rs.html
doc/src/bio/alignment/: mod.rs.html  pairwise.rs.html
doc/src/bio/data_structures/: bwt.rs.html  mod.rs.html  rank_select.rs.html  suffix_array.rs.html
doc/src/bio/io/: fastq.rs.html  mod.rs.html
doc/src/bio/pattern_matching/: bndm.rs.html  bom.rs.html  horspool.rs.html  (+3 more)
examples/: fmindex_fastq.rs  multithreaded.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: banded_aligner.rs  myers_matching.rs
scripts/: substitution-matrix-conv.py
src/: alphabets.rs  bitencoding.rs  lib.rs  main.rs  stats.rs  utils.rs
src/alignment/: banded.rs  distance.rs  example4.fa  mod.rs  multiple_alginments.rs  pairwise.rs  poa.rs  sparse.rs
src/alignment/pairwise/: banded.rs  fast.rs  mod.rs  myers_miller.rs  old.rs
src/alphabets/: dna.rs  mod.rs  protein.rs  rna.rs
src/blast/: blast_req.rs  mod.rs
src/data_structures/: annot_map.rs  bit_tree.rs  bitenc.rs  bwt.rs  bwt.rs.in  cgranges.rs  fmindex.rs  fmindex.rs.in  interpolation_table.rs  interval.rs  interval_tree.rs  mod.rs  qgram_index.rs  rank_select.rs  smallints.rs  suffix_array.rs  wavelet_matrix.rs
src/data_structures/interval_tree/: array_backed_interval_tree.rs  avl_interval_tree.rs  mod.rs
src/io/: bed.rs  bedpe.rs  bnx.rs  cmap.rs  core.rs  core_record.rs  fasta.rs  fastq.rs  fastx.rs  gaf.rs  gff.rs  mod.rs  newick.pest  newick.rs  om_utils.rs  pdb.rs  phylip.rs  xmap.rs
src/io/bed/: bed.rs  common.rs  mod.rs
src/io/om/: bnx.rs  cmap.rs  common.rs  mod.rs  xmap.rs
src/pattern_matching/: bndm.rs  bom.rs  horspool.rs  kmp.rs  mating.rs  mod.rs  myers.rs  replace.rs  shift_and.rs  ukkonen.rs
src/pattern_matching/myers/: builder.rs  common_tests.rs  helpers.rs  long.rs  mod.rs  myers_impl.rs  simple.rs  traceback.rs
src/pattern_matching/pssm/: dnamotif.rs  errors.rs  mod.rs  protmotif.rs
src/patternmatching/: shift_and.rs
src/phylogeny/: mod.rs
src/scores/: blosum30.rs  blosum45.rs  blosum62.rs  blosum62_array.rs  blosum80.rs  mod.rs  pam120.rs  pam200.rs  pam250.rs  pam40.rs
src/seq_analysis/: data.rs  gc.rs  kmer.rs  mod.rs  orf.rs  protein.rs
src/seq_analysis/data/: protein.rs
src/seq_analysis/protein/: isoelectric_point.rs  mod.rs
src/seq_loc/: mod.rs  seq_pos.rs
src/single_cell/: csv.rs  eds.rs  h5.rs  iter.rs  mod.rs  mtx.rs  scmatrix.rs  single_cell_experiment.rs
src/stats/: bayesian.rs  cdf.rs  combinatorics.rs  hmm.rs  logprobs.rs  mod.rs  pairhhmm.rs  pairhmm.rs  probs.rs  profilehmm.rs
src/stats/bayesian/: bayes_factors.rs  mod.rs  model.rs
src/stats/hmm/: errors.rs  mod.rs
src/stats/pairhmm/: homohmm.rs  homopolypairhmm.rs  mod.rs  pairhmm.rs
src/stats/probs/: adaptive_integration.rs  cdf.rs  errors.rs  mod.rs  transparent.rs
src/utils/: fastexp.rs  interval.rs  io.rs  mod.rs  nonnanfloat.rs  replace.rs  text.rs
src/utils/interval/: errors.rs  mod.rs
tests/: lib.rs  mod.rs
tests/data_structures/: mod.rs  rank_select.rs
tests/resources/: incomplete_input.cmap  invalid_channel.cmap  invalid_input.bnx  invalid_input.cmap  invalid_input.xmap  non_utf8_with_complete_record.bnx  non_utf8_with_complete_record.cmap  non_utf8_with_incomplete_record.bnx  non_utf8_with_incomplete_record.cmap  non_utf8_with_record.xmap  single_line.xmap  valid_input.bnx  valid_input.cmap  valid_input.xmap
