[package]
name = "bio"
version = "1.0.0"
authors = ["Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "A bioinformatics library for Rust. This library provides implementations of many algorithms and data structures that are useful for bioinformatics, but also in other fields."
homepage = "https://rust-bio.github.io"
repository = "https://github.com/rust-bio/rust-bio"
documentation = "https://docs.rs/bio"
readme = "README.md"
license = "MIT"
edition = "2018"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md", "build.rs"]

[package.metadata.release]
pre-release-commit-message = "release version {{version}}"
tag-message = "Version {{version}} of Rust-Bio."

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]
phylogeny = ["pest", "pest_derive", "bio-types/phylogeny"]


[dependencies]
bytecount = "0.6"
csv = "1.1"
num-traits = "0.2"
num-integer = "0.1"
itertools = ">= 0.8, < 0.11"
itertools-num = "0.1"
bv = { version = "0.11", features = ["serde"] }
bit-set = "0.5"
ndarray= ">=0.13, <0.16"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
approx = ">=0.3, <0.6"
custom_derive = "0.1"
newtype_derive = "0.1"
ordered-float = "3.1"
regex = { version = "1.3", default-features = false, features = ["std", "perf"] }
multimap = ">=0.6, <0.9"
fxhash = "0.2"
statrs = ">= 0.11, < 0.17"
bio-types = ">=0.11.0"
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
strum = ">= 0.16, < 0.25"
strum_macros = ">= 0.16, < 0.25"
getset = ">=0.0.9, <0.2"
enum-map = ">=0.6.4, <2"
triple_accel = ">=0.3, <0.5"
thiserror = "1"
anyhow = "1"
rand = ">=0.7.3, < 0.9"

[dependencies.vec_map]
version = "0.8"
features = ["eders"]

[dependencies.petgraph]
version = ">=0.4, <0.7"
features = ["stable_graph"]


[dev-dependencies]
proptest = "1"
tempfile = "3.1.0"
rand = "0.8.3"
